      resistance no longer reduce damage from fire, cold, shock or acid attacks.
* Reflection no longer reflects breaths; disintegration breath is treated as a
  beam to prevent unfair deaths due to this change.  The breath graphic has been
  changed accordingly.
* Changes to skills:
    - New body armor skill:
        - Body armor skill grants bonus AC and MC for suits of body armor based
          on their weight and capped by your skill.
        - Grants (weight / 50 - 2) bonus AC for body armor capped at +2 at
          basic, +4 at skilled and +7 at expert.
        - Grants (weight / 100 - 1) minimum MC for body armor capped at MC1 at
          basic, MC2 at skilled and MC3 at expert.
        - Trains to expert in between 16k and 24k turns; wearing heavier suits
          of body armor speeds up training.
        - Maximum skill levels:
            - Expert: Knight, Samurai
            - Skilled: Barbarian, Convict, Priest, Ranger, Valkyrie
            - Basic: Archeologist, Caveman, Rogue, Tourist
            - Restricted: Healer, Monk, Wizard
            - Unlike weapon skills, body armor skill always starts at unskilled.
    - New shield skill:
        - Shield skill grants bonus AC and MC for shields based on their weight
          and base AC, and is capped by your skill.
        - Grants (weight / 20 + base AC) bonus AC for shields capped at +2 at
          basic, +4 at skilled and +7 at expert.
        - Grants (base AC + [1 if weight > 50]) minimum MC for shields capped at
          MC1 at basic, MC2 at skilled and MC3 at expert.
        - Trains to expert in between 11.2k and 16.8k turns; wearing heavier
          shields speeds up training.
        - Maximum skill levels:
            - Expert: Knight, Priest, Valkyrie
            - Skilled: Archeologist, Barbarian, Ranger, Rogue, Samurai
            - Basic: Caveman, Convict, Tourist
            - Restricted: Healer, Monk, Wizard